--- a/index.html
+++ b/index.html
@@ -58,8 +58,37 @@
                <!-- <span class="author-block">
                 <a href="" target="_blank">Anonymous Authors</a>
                 <span class="author-block"> -->
-                <a href="" target="_blank">Anonymous Authors</a>
-                </div>
+                  <a href="https://yixiaowang7.github.io" target="_blank">Yixiao Wang</a><sup>1</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Mingxiao Huo</a><sup>2</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Zhixuan Liang</a><sup>3</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Yushi Du</a><sup>4</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Lingfeng Sun</a><sup>1</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Haotian Lin</a><sup>2</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Jinghuan Shang</a><sup>5</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Chensheng Peng</a><sup>1</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Mohit Bansal</a><sup>6</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Mingyu Ding</a><sup>6</sup><sup>&dagger;</sup></span>
+                  <span class="author-block">
+                  <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
+                  </div>
+                  <div class="is-size-5 publication-authors">
+                      <span class="author-block"><sup>1</sup>University of California, Berkeley</span>
+                      <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
+                      <span class="author-block"><sup>3</sup>University of Hong Kong</span>
+                      <span class="author-block"><sup>4</sup>Peking University</span>
+                      <span class="author-block"><sup>5</sup>Stony Brook University</span>
+                      <span class="author-block"><sup>6</sup>The University of North Carolina at Chapel Hill</span>
+                      <span class="eql-cntrb"><small><br><sup>&dagger;</sup>Indicates Corresponding Author</small></span>
+                  </div> 
 
 
                     <!-- Supplementary PDF link -->
@@ -75,12 +104,12 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="" target="_blank"
+                    <a href="https://github.com/YixiaoWang7/ver" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (Coming Soon)</span>
+                    <span>Code</span>
                   </a >
                 </span>
 
@@ -185,7 +214,7 @@
 <section class="hero image-section">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/pdfs/structure_ver.pdf" alt="Description of image" style="width: 100%; height: auto;">
+      <img src="static/images/structure_ver.png" alt="Description of image" style="width: 100%; height: auto;">
       <h2 class="subtitle has-text-centered" style="font-size: 16px;">
         Overall structure of VER. VER comprises two key components: the Base Vision Transformer (BVT), which processes images into unified representations, 
         and the Vision Expert Library (VEL), which stores a diverse set of specialized vision experts and selectively utilizes them to mimic teacher vision 
